--- a/src/Pages/SelecaoSemana/Selecao.module.css
+++ b/src/Pages/SelecaoSemana/Selecao.module.css
@@ -1,10 +1,3 @@
-*{
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
-    font-family: "Montserrat", serif;;
-}
-
 .topBar{
     border-radius: 0px 0px 100px 100px;
     -moz-border-radius: 0px 0px 100px 100px;
@@ -20,21 +13,24 @@
     width: 20%;
 }
 
+.topEst{
+    margin-top: 3rem;
+    margin-bottom: 2rem;
+    padding: 20px;
+}
+
+.topEst img{
+    width: 8%;
+}
+
 .caixaTxt h2{
-    color: #066f00;
-    background-color: #133511;
-    max-width: 15ch;
-    padding: 0.8rem;
+    color: #133511;
     font-size: 18pt;
     text-align: left;
 }
 
 .caixaTxt p{
-    color:  white;
-    font-weight: 500;
-    line-height: 1.5;
-    background-color: #066f00;
-    padding: 0.5rem;
+    color:  black;
     font-size: 14pt;
 }
 
@@ -89,4 +85,3 @@
         width: 12%;
     }
 }
-
