--- a/src/Pages/Menu/Menu.module.css
+++ b/src/Pages/Menu/Menu.module.css
@@ -78,6 +78,15 @@
     right: 20px;
     color: white;
     font-weight: 800;
+    display: flex;
+    align-items: center;
+    flex-direction: row-reverse;
+}
+
+.boxAnimation{
+    width: 50%;
+    position: absolute;
+    bottom: 1px;
 }
 
 @media (max-width: 700px){
